--- a/index.html
+++ b/index.html
@@ -591,9 +591,9 @@
         style="background-image: url('./assets/images/blog-bg.svg')">
         <div class="container">
 
-          <p class="section-subtitle">Latest Articles</p>
+          <p class="section-subtitle">Artigos Mais Recentes</p>
 
-          <h2 class="h2 section-title">Get News With Eduweb</h2>
+          <h2 class="h2 section-title">Receba notícias com OPBUILd</h2>
 
           <ul class="grid-list">
 
